Grace/tests/gibbs/errors/t004.grace
// ERROR = L0004
var num := 07f
